--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,3 +29,5 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - "37017:27017"
