--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       DATA_DIR: ${DATA_DIR}
       mongouser: ${mongouser}
       mongopassword: ${mongopassword}
-    entrypoint: ./start.sh test
+    entrypoint: ["./start.sh", "test"]
     depends_on:
       - mongodb
     volumes:
