more is working

--- a/src/pure3d/control/yaml/authorise.yaml
+++ b/src/pure3d/control/yaml/authorise.yaml
@@ -21,7 +21,7 @@ actions:
 #  a list of project specific roles
 #  that are permitted to do the action
 #
-projectrules:
+projectRules:
   published:
     null:
       create: false
