before move to other repo

--- a/exampledata/projects/1/editions/2/meta/dc.yml
+++ b/exampledata/projects/1/editions/2/meta/dc.yml
@@ -1,4 +1,5 @@
-title: Clanwilliam House
+title: |-
+  Clanwilliam House
 description:
   abstract: |-
     **Clanwilliam House**, 1-2 Clanwilliam Place,
