--- a/exampledata/projects/1/meta/dc.yml
+++ b/exampledata/projects/1/meta/dc.yml
@@ -116,5 +116,5 @@ rights:
   rightsHolder: Faculty of Arts and Social Sciences, Maastricht University
   license: Creative Commons
   accessRights: Open Access - Unrestricted Access
-dateAccepted: 2022-10-12
-dateSubmitted: 2022-04-18
+dateAccepted: "2022-10-12"
+dateSubmitted: "2022-04-18"
