--- a/exampledata/projects/2/meta/dc.yml
+++ b/exampledata/projects/2/meta/dc.yml
@@ -1,4 +1,5 @@
-title: Lighting the Darkness: Dutch Mining Lamps
+title: |-
+  Lighting the Darkness: Dutch Mining Lamps
 description:
   abstract: |-
     The mining lamp collection of Hans Dubbel.
@@ -65,5 +66,5 @@ rights:
   rightsHolder: Nederlands Mining Museum
   license: Creative Commons
   acessRights: Open Access - Unrestricted Access
-dateAccepted: 2021-09-15
-dateSubmitted: 2021-03-13
+dateAccepted: "2021-09-15"
+dateSubmitted: "2021-03-13"
