--- a/pilots/test-pure3d/src/workflow/init.yml
+++ b/pilots/test-pure3d/src/workflow/init.yml
@@ -60,4 +60,25 @@ status:
       "3":
         "1": false
 
-
+name: 
+  project:
+      "1": 
+        title: Contested Memories - The Battle of Mount Street Bridge
+      "2":
+        title: Tokyo University Workshop 2022
+      "3":
+        title: Diaconie Weeshuis
+  edition:
+    "1":
+      "1":
+        title: 25 Northumberland Road
+      "2":
+        title: Clanwilliam House
+    "2":
+      "1":
+        title: Yurt
+      "2":
+        title: Hurdy-Gurdy
+    "3":
+      "1":
+        title: Diaconie Weeshuis
